# node-editor

./: .gitignore  CMakeLists.txt
include/: node_view.h
libs/SDL/Xcode/SDL/SDL.xcodeproj/: project.pbxproj
src/: main.cpp  node_view.cpp
